--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -47,9 +47,24 @@
     <Compile Include="MenuEntries.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartingPopulations.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StartingPopulations.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Resources\Pop 1.gol" />
+    <None Include="Resources\Pop 2.gol" />
+    <None Include="Resources\Pop 3.gol" />
+    <None Include="Resources\Pop 4.gol" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="StartingPopulations.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>StartingPopulations.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
