Added ability to use from embedded resources
Also changed resource names and started messing with where the menus are
printed in the console window.

--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -67,6 +67,9 @@
     </EmbeddedResource>
     <None Include="Resources\sparky.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\wickstretcher.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
