--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="GoLBoard.cs" />
     <Compile Include="GoLRunner.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="MenuText.cs" />
     <Compile Include="LargePops.Designer.cs">
       <AutoGen>True</AutoGen>
