--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -43,8 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsSize.cs" />
     <Compile Include="GoLBoard.cs" />
-    <Compile Include="GoLRunner.cs" />
+    <Compile Include="GoLHelper.cs" />
     <Compile Include="GenericHelp.cs" />
     <Compile Include="MenuText.cs" />
     <Compile Include="LargePops.Designer.cs">
