--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -71,10 +71,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SmallPops.Designer.cs">
+    <Compile Include="BuilderPops.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>SmallPops.resx</DependentUpon>
+      <DependentUpon>BuilderPops.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -89,9 +89,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>LargePops.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="SmallPops.resx">
+    <EmbeddedResource Include="BuilderPops.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>SmallPops.Designer.cs</LastGenOutput>
+      <LastGenOutput>BuilderPops.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="Resources\sparky.txt" />
   </ItemGroup>
