started adding automta rule feature without making a new branch, oops

--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutomataRule.cs" />
     <Compile Include="ClassStructHelpers.cs" />
     <Compile Include="GoL.cs" />
     <Compile Include="GoLHelper.cs" />
