--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AutomataRule.cs" />
     <Compile Include="ClassStructHelpers.cs" />
+    <Compile Include="ConsoleRunHelper.cs" />
     <Compile Include="GoL.cs" />
     <Compile Include="GoLHelper.cs" />
     <Compile Include="GenericHelp.cs" />
