Created IConsoleAutomata interface for use in running the games. AutomataRule type boards can now be run using same controls as GoL boards.

--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -63,8 +63,8 @@
     <Compile Include="ClassStructHelpers.cs" />
     <Compile Include="ConsoleRunHelper.cs" />
     <Compile Include="GoL.cs" />
-    <Compile Include="GoLHelper.cs" />
     <Compile Include="GenericHelp.cs" />
+    <Compile Include="IConsoleAutomata.cs" />
     <Compile Include="MenuText.cs" />
     <Compile Include="LargePops.Designer.cs">
       <AutoGen>True</AutoGen>
