Changed file/class names to better reflect the new interface. Fixed a bug that has been in the filevalidation code since probably forever. SaveBoard now works with Automata1D boards.

--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -59,10 +59,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutomataRule.cs" />
+    <Compile Include="Automata1D.cs" />
     <Compile Include="ClassStructHelpers.cs" />
     <Compile Include="ConsoleRunHelper.cs" />
-    <Compile Include="GoL.cs" />
+    <Compile Include="Automata2D.cs" />
     <Compile Include="GenericHelp.cs" />
     <Compile Include="IConsoleAutomata.cs" />
     <Compile Include="MenuText.cs" />
