--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -64,7 +64,7 @@
     <Compile Include="ConsoleRunHelper.cs" />
     <Compile Include="Automata2D.cs" />
     <Compile Include="GenericHelp.cs" />
-    <Compile Include="IConsoleAutomata.cs" />
+    <Compile Include="ConsoleAutomata.cs" />
     <Compile Include="MenuText.cs" />
     <Compile Include="LargePops.Designer.cs">
       <AutoGen>True</AutoGen>
