--- a/GHGameOfLife/GHGameOfLife.csproj
+++ b/GHGameOfLife/GHGameOfLife.csproj
@@ -78,6 +78,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BuilderPops.resx</DependentUpon>
     </Compile>
+    <Compile Include="Rules\Rules1D.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
